# daily-literature-tracker

./: .env.template  .gitignore  LICENSE  README-zh.md  README.md  pyproject.toml  requirements.txt  run.py
configs/agent_builder/: config.yaml
configs/coding_agent/: config.yaml
configs/daily_literature_tracker/: config.yaml  mcp_config.json
configs/feishu/: config.yaml
configs/magiclaw/: config.yaml
configs/report_writer_agent/: config.yaml
configs/web_search_agent/: config.yaml
evomaster/agent/: agent.py
evomaster/agent/session/: base.py  docker.py
evomaster/core/: playground.py
evomaster/env/: container_pool.py  docker.py
evomaster/interface/feishu/: app.py  background_task.py  config.py  dispatcher.py  event_handler.py  scheduler_adapter.py  session_manager.py  step_reporter.py
evomaster/scheduler/: __init__.py  errors.py  models.py  parser.py  service.py  store.py
evomaster/utils/: llm.py  types.py
playground/: __init__.py
playground/agent_builder/: __init__.py
playground/agent_builder/core/: __init__.py  playground.py
playground/agent_builder/prompts/: builder_system_prompt.txt  planner_system_prompt.txt
playground/agent_builder/tools/: __init__.py  feishu_doc_write.py
playground/coding_agent/: __init__.py
playground/coding_agent/core/: __init__.py  playground.py
playground/coding_agent/prompts/: system_prompt.txt  user_prompt.txt
playground/daily_literature_tracker/: USAGE.md  __init__.py  config.yaml  paper_to_hunt.md
playground/report_writer_agent/: __init__.py
playground/web_search_agent/: __init__.py
(+31 files in other folders)
